--- a/src/index.css
+++ b/src/index.css
@@ -3251,7 +3251,7 @@ ul.uk-nav-sub {
   bottom: 0;
   left: 0;
   z-index: 1010;
-  background: #000;
+  background: #333;
   opacity: 0;
   -webkit-transition: opacity 0.15s linear;
   -o-transition: opacity 0.15s linear;
@@ -6778,7 +6778,7 @@ iframe.uk-cover {
   ::after,
   ::before {
     background: 0 0 !important;
-    color: #000 !important;
+    color: #333 !important;
     -webkit-box-shadow: none !important;
     box-shadow: none !important;
     text-shadow: none !important;
@@ -6866,7 +6866,7 @@ iframe.uk-cover {
 .hamburger-inner::before {
   width: 40px;
   height: 4px;
-  background-color: #000;
+  background-color: #333;
   -webkit-border-radius: 0;
   border-radius: 0;
   position: absolute;
@@ -8433,11 +8433,11 @@ iframe.uk-cover {
   color: #666;
 }
 ::-moz-selection {
-  background-color: #000;
+  background-color: #333;
   color: #fff;
 }
 ::selection {
-  background-color: #000;
+  background-color: #333;
   color: #fff;
 }
 html {
@@ -8453,7 +8453,7 @@ body {
   font-family: worksans-medium, sans-serif;
   overflow-x: hidden;
   overflow-y: hidden;
-  color: #000;
+  color: #333;
   -webkit-font-smoothing: antialiased;
 }
 body input,
@@ -8495,10 +8495,10 @@ header .logo {
   letter-spacing: 1px;
 }
 header .logo a {
-  color: #000;
+  color: #333;
 }
 header .logo a:hover {
-  color: #000;
+  color: #333;
   text-decoration: none;
 }
 header nav {
@@ -8515,8 +8515,12 @@ header nav ul.soc-icons li:not(:last-child) {
   padding-right: 15px;
 }
 header nav ul.soc-icons li img {
-  /* height: 20px; */
-  margin-top: -5px;
+  margin-top: -3px;
+  opacity: 0.65;
+  transition: all 0.5s ease;
+}
+header nav ul.soc-icons li img:hover {
+  opacity: 1;
 }
 header nav ul.soc-icons li a:after {
   display: none;
@@ -8535,7 +8539,7 @@ header nav ul li:not(:last-child) {
   padding-right: 20px;
 }
 header nav ul li a {
-  color: #000;
+  color: #333;
   position: relative;
   font-family: worksans-light, sans-serif;
   letter-spacing: 2px;
@@ -8548,13 +8552,13 @@ header nav ul li a:after {
   left: 0;
   width: 0;
   height: 1px;
-  background-color: #000;
+  background-color: #333;
   -webkit-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
   transition: all 0.5s ease;
 }
 header nav ul li a:hover {
-  color: #000;
+  color: #333;
   text-decoration: none;
 }
 header nav ul li a:hover:after,
@@ -8618,7 +8622,7 @@ header nav ul li a:hover:after,
   letter-spacing: 1px;
 }
 .content a {
-  color: #000;
+  color: #333;
   position: relative;
 }
 .content a:after {
@@ -8629,13 +8633,13 @@ header nav ul li a:hover:after,
   left: 0;
   width: 100%;
   height: 1px;
-  background-color: #000;
+  background-color: #333;
   -webkit-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
   transition: all 0.5s ease;
 }
 .content a:hover {
-  color: #000;
+  color: #333;
   text-decoration: none;
 }
 .content a:hover:after {
@@ -8655,7 +8659,7 @@ header nav ul li a:hover:after,
   position: absolute;
   width: 10px;
   height: 1px;
-  background-color: #000;
+  background-color: #333;
   left: 0;
   top: 12px;
 }
@@ -8708,7 +8712,7 @@ header nav ul li a:hover:after,
   header nav ul.soc-icons li img {
     -webkit-filter: brightness(0) invert(1);
     filter: brightness(0) invert(1);
-    height: 50px;
+    height: 27px;
   }
   header nav ul {
     display: block;
@@ -8722,7 +8726,7 @@ header nav ul li a:hover:after,
   }
   header nav ul li a {
     color: #fff;
-    font-size: 45px;
+    font-size: 27px;
   }
   header nav.active_mnu_mobile {
     right: 0;
@@ -8733,7 +8737,17 @@ header nav ul li a:hover:after,
     position: relative;
   }
 }
-@media (max-width: 640px) {
+
+@media (max-width: 800px) {
+  .project-short-item .uk-overlay {
+    padding: 0;
+  }
+  .project-short-item .head {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 639px) {
   header nav {
     width: -webkit-calc(100% - 80px);
     width: calc(100% - 80px);
@@ -8744,9 +8758,14 @@ header nav ul li a:hover:after,
     display: block;
     width: 100%;
   }
-  .project-short-item.project-short-big {
-    padding-top: 100%;
+  main,
+  header {
+    padding-left: 15px;
+    padding-right: 15px;
   }
+  /* .project-short-item.project-short-big {
+    padding-top: 100%;
+  } */
 }
 @media (max-width: 400px) {
   header nav {
