--- a/src/index.css
+++ b/src/index.css
@@ -8490,12 +8490,18 @@ header {
   text-transform: uppercase;
   font-size: 20px;
 }
-header .logo {
+
+header .logo a,
+header .logo a h1 {
+  color: #333;
   font-weight: 700;
   letter-spacing: 1px;
-}
-header .logo a {
-  color: #333;
+  font-size: 20px;
+  text-transform: uppercase;
+  margin: 0;
+  display: block;
+  line-height: 20px;
+  font-family: worksans-medium, sans-serif;
 }
 header .logo a:hover {
   color: #333;
@@ -8579,6 +8585,7 @@ header nav ul li a:hover:after,
 }
 .project-short-item .head {
   color: #fff;
+  font-size: 20px;
 }
 .project-short-item .uk-overlay {
   background-color: rgba(0, 0, 0, 0.6);
@@ -8674,7 +8681,7 @@ header nav ul li a:hover:after,
     padding-top: calc(50% - 15px);
   }
 }
-@media (max-width: 940px) {
+@media (max-width: 960px) {
   header nav {
     position: fixed;
     height: 100vh;
@@ -8741,9 +8748,6 @@ header nav ul li a:hover:after,
 @media (max-width: 800px) {
   .project-short-item .uk-overlay {
     padding: 0;
-  }
-  .project-short-item .head {
-    font-size: 20px;
   }
 }
 
